samples/_failures_safe/1761560536_6a652e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb6b51aa.c: In function ‘main’:
./samples/SAFE/__tmp_bb6b51aa.c:147:5: error: expected expression at end of input
  147 |     size_t decompressed_size = decompress_rle(compressed_buf.data, compressed_buf.size, decompressed, sizeof
      |     ^~~~~~
./samples/SAFE/__tmp_bb6b51aa.c:147:5: error: expected declaration or statement at end of input
